<resources>
    <string name="app_name">qwer</string>
    <string name="Start">Старт</string>
    <string name="Back">Назад</string>
    <string name="start">Привет, меня зовут Захар, и я пробую делать что то на андроид, с каждым уровнем я буду давать тебе интересные факты, поэтому если тебе интересно, то в бой!!!</string>
    <string name="lvl">Уровень:</string>
    <string name="lvl1">Уровень 1</string>
    <string name="school2">"да" или "нет"</string>
    <string name="life2">go on</string>
    <string name="levelushaka3">Уровень 3</string>
    <string name="levelushaka4">Уровень 4</string>
    <string name="levelushaka5">Уровень 5</string>
    <string name="levelushaka6">Уровень 6</string>
    <string name="Paris2">Нажимай на число, что меньше и проходи дальше</string>
    <string name="lvl12345">Уровень 2</string>
    <string name="GoOn">Продолжить</string>
    <string name="montains">Самая высокая вершина на Земле — Джомолунгма, высотой 8848 метров. При этом гора с наибольшей высотой от основания до вершины — подводный вулкан Мауна-Кеа, США, штат Гавайи. Высота Мауна-Кеа — 10203 метра, но над уровнем моря этот вулкан возвышается лишь на 4205 метров.</string>
    <string name="LEFT">Уровень:</string>
    <string name="life">Всё, кроме любви, вся наша жизнь так далеко.
Я, я - не один, но без Тебя просто никто.</string>
    <string name="school">Когда Джон Леннону из The Beatles было пять лет, мама ему сказала, что самое главное в жизни — быть счастливым. Потом он пошел в школу и его спросили там: «Кем ты мечтаешь стать в жизни?». Он ответил: «Счастливым». Ему сказали: «Ты не понимаешь задания». На что он ответил: «Вы не понимаете жизнь». А ты понимаешь жизнь?</string>
    <string name="Paris">Согласно статистике, в Париже больше собак, чем детей – настолько парижане любят заводить питомцев. Многие парижские рестораны разрешают клиентам приводить с собой собак.</string>
    <string name="Flowers2">А теперь про уровень! Это легкий уровень, кликай на число что больше другого, не боись, дальше будет сложнее</string>
    <string name="montains2">а теперь попробуем наоборот, кликай по тем, что меньше(проверка приложения)</string>
    <string name="RIGHT">Уровень:</string>
    <string name="True">да</string>
    <string name="Go">go</string>
    <string name="False">не</string>
    <string name="Flowers">Белых цветов не бывает – на самом деле они бесцветные, то есть не имеющие каких-либо цветных пигментов и просто отражающие солнечный свет. Чёрного пигмента в мире цветов также не существует – цвет может быть либо тёмно-красным, либо насыщенно фиолетовым.</string>
</resources>
