<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/preview"
    android:background="@drawable/zxcvb"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/X"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="X"
            android:gravity="center"
            android:layout_gravity="end"
            android:textColor="@color/blaaaaaaaaaaaack"
            android:background="@drawable/press_button111"
            android:textStyle="bold"
            android:onClick="krEst"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/life"
            android:layout_weight="30"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/hru"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/life"
            android:layout_weight="30"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/hru1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/life2"
            android:layout_weight="7"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/X1"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/GoOn"
            android:background="@drawable/press_button"
            android:layout_weight="4"/>

    </LinearLayout>
</LinearLayout>