<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/newphoto" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        app:srcCompat="@drawable/bbbb"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/conteiner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/press_btn2"
                    android:text="@string/Back"
                    android:textColor="@color/black70"
                    android:textAllCaps="false"
                    android:textSize="32dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/press_btn2"
                    android:padding="10dp"
                    android:text="@string/lvl"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point6"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point7"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point9"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />
                <TextView
                    android:id="@+id/point10"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"


                >

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="30dp"
                    android:background="@drawable/grey"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/textLEFT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/True"
                    android:textColor="@color/blaaaaaaaaaaaack"
                    android:textSize="18dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/textRIGHT"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text= "@string/False"
                    android:textSize="18dp"
                    android:textColor="@color/blaaaaaaaaaaaack"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>