<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Level_5">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/newphoto" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/bbbb"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/conteiner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/press_btn2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Back"
                    android:textAllCaps="false"
                    android:textColor="@color/black70"
                    android:textSize="32dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/press_btn2"
                    android:padding="10dp"
                    android:text="@string/lvl"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point2"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point3"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point4"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point5"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point6"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />

                <TextView
                    android:id="@+id/point7"
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points1" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"


                />

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/LayoutColor"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:background="@drawable/stylenew_yellow"
                    android:layout_marginLeft="90dp"

                    android:textColor="@color/blaaaaaaaaaaaack"
                    android:textSize="30dp"
                    android:orientation="horizontal" />
                <Button
                    android:id="@+id/clickkkk"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:text="@string/Go"
                    android:textAllCaps="false"
                    android:textColor="@color/blaaaaaaaaaaaack"
                    android:onClick="CLICK"/>



            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btncatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="catch" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>